# test-linux

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-linux.yaml
config/: qt.cmake
docs/: README.md
src/: dummy_codeql.cpp  hello_ios.cpp
tests/cpp-tests/: tst_cpptest.cpp
tests/qml-tests/: setup.cpp
